WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40242
[Qt] ContextMenuClientQt.h has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40242
Summary
[Qt] ContextMenuClientQt.h has coding-style errors
Anders Bakken
Reported
2010-06-07 11:37:56 PDT
[Qt] ContextMenuClientQt.h has coding-style errors
Attachments
Patch
(2.13 KB, patch)
2010-06-07 11:38 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 11:38:21 PDT
Created
attachment 58055
[details]
Patch
Laszlo Gombos
Comment 2
2010-06-08 18:03:53 PDT
Comment on
attachment 58055
[details]
Patch lgtm, r+.
WebKit Commit Bot
Comment 3
2010-06-09 14:07:28 PDT
Comment on
attachment 58055
[details]
Patch Clearing flags on attachment: 58055 Committed
r60912
: <
http://trac.webkit.org/changeset/60912
>
WebKit Commit Bot
Comment 4
2010-06-09 14:07:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug