2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by Laszlo Gombos.

        [Qt] ContextMenuClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40242

        * WebCoreSupport/ContextMenuClientQt.h:

Canonical link: https://commits.webkit.org/51927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60912 268f45cc-cd09-0410-ab3c-d52691b4dbfc